--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,17 @@
   <link rel="stylesheet" href="lib/onsen/css/onsenui.css">
   <link rel="stylesheet" href="lib/onsen/css/onsen-css-components.css">
   <link rel="stylesheet" href="style.css">
-
+   <script>
+   // Wait for PhoneGap to load
+    //
+    document.addEventListener("deviceready", onDeviceReady, false);
+   
+    // PhoneGap is ready
+    //
+    function onDeviceReady() {
+        var db = window.openDatabase("test", "1.0", "Test DB", 1000000);
+    }
+   </script>
 </head>
 
 <body>
