--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -9,58 +9,68 @@
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" href="lib/onsen/css/onsenui.css">
   <link rel="stylesheet" href="lib/onsen/css/onsen-css-components.css">
   <link rel="stylesheet" href="style.css">
    <script>
-    document.addEventListener("deviceready", onDeviceReady, false);
+   $(document).ready(function(){
+       //document.addEventListener("deviceready", onDeviceReady, false);
+         console.log("aqui foi"); 
+       // Populate the database 
+       var db = window.openDatabase("Database", "1.0", "PhoneGap Demo", 200000);
+       db.transaction(queryDB, errorCB);
+       
+       function populateDB(tx) {
+           tx.executeSql('DROP TABLE IF EXISTS DEMO');
+           tx.executeSql('CREATE TABLE IF NOT EXISTS DEMO (id unique, data)');
+           tx.executeSql('INSERT INTO DEMO (id, data) VALUES (1, "First row")');
+           tx.executeSql('INSERT INTO DEMO (id, data) VALUES (2, "Second row")');
+       }
 
-    // Populate the database 
-    //
-    function populateDB(tx) {
-        tx.executeSql('DROP TABLE IF EXISTS DEMO');
-        tx.executeSql('CREATE TABLE IF NOT EXISTS DEMO (id unique, data)');
-        tx.executeSql('INSERT INTO DEMO (id, data) VALUES (1, "First row")');
-        tx.executeSql('INSERT INTO DEMO (id, data) VALUES (2, "Second row")');
-    }
+       // Query the database
+       //
+       function queryDB(tx) {
+           tx.executeSql('SELECT * FROM DEMO', [], querySuccess, errorCB);
+       }
 
-    // Query the database
-    //
-    function queryDB(tx) {
-        tx.executeSql('SELECT * FROM DEMO', [], querySuccess, errorCB);
-    }
+       // Query the success callback
+       //
+       function querySuccess(tx, results) {
+           // this will be empty since no rows were inserted.
+           myApp.services.tasks.create( {
+               title: results.insertId,
+               category: 'Programming',
+               description: 'Some description.',
+               highlight: false,
+               urgent: false
+             });
+           console.log("Insert ID = " + results.insertId);
+           // this will be 0 since it is a select statement
+           console.log("Rows Affected = " + results.rowAffected);
+           // the number of rows returned by the select statement
+           console.log("Insert ID = " + results.rows.length);
+       }
 
-    // Query the success callback
-    //
-    function querySuccess(tx, results) {
-        // this will be empty since no rows were inserted.
-        console.log("Insert ID = " + results.insertId);
-        // this will be 0 since it is a select statement
-        console.log("Rows Affected = " + results.rowAffected);
-        // the number of rows returned by the select statement
-        console.log("Insert ID = " + results.rows.length);
-    }
+       // Transaction error callback
+       //
+       function errorCB(err) {
+           console.log("Error processing SQL: "+err.code);
+       }
 
-    // Transaction error callback
-    //
-    function errorCB(err) {
-        console.log("Error processing SQL: "+err.code);
-    }
-
-    // Transaction success callback
-    //
-    function successCB() {
-        var db = window.openDatabase("Database", "1.0", "PhoneGap Demo", 200000);
-        db.transaction(queryDB, errorCB);
-    }
- // PhoneGap is ready
-    //
-    function onDeviceReady() {
-        var db = window.openDatabase("Database", "1.0", "PhoneGap Demo", 200000);
-        db.transaction(populateDB, errorCB, successCB);
-    }
-
+       // Transaction success callback
+       //
+       function successCB() {
+           
+       }
+    // PhoneGap is ready
+       //
+       function onDeviceReady() {
+            console.log("aqui tbm");
+           var db = window.openDatabase("Database", "1.0", "PhoneGap Demo", 200000);
+           db.transaction(populateDB, errorCB, successCB);
+       }
+});
    </script>
 </head>
 
